fixed long-standing bug where '__' weren't surrounding the init method for the Token class, added desugaring dict to Token class, added todo item

--- a/todo
+++ b/todo
@@ -1,4 +1,3 @@
 TODO:
- - test the lexer
  - make parser generate a custom AST instead of using python lists and strings
- - test the parser
+ - expand syntactic sugar to full forms, i.e. '<x> -> (quote <x>)
